<resources>
    <string name="app_name">ScanMalayalam</string>
    <string name="saved_image">Saved Image</string>
    <string name="uploaded_no">Uploaded : No</string>
    <string name="delete">Delete</string>
    <string name="camera">Camera</string>
    <string name="select_photo">Select Photo</string>
    <string name="crop">Crop</string>
    <string name="proceed">Proceed</string>
    <string name="view_saved_images">View Saved Images</string>
    <string name="edit">Edit</string>
    <string name="action_settings">Settings</string>
    <string name="upload">Upload</string>
</resources>
